--- a/react_study/src/react_10/css/layout.css
+++ b/react_study/src/react_10/css/layout.css
@@ -1,4 +1,5 @@
 /* reset */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -29,72 +30,149 @@ table, th, td {
   border-spacing: 0;
 }
 
+/* font */
+body {
+  color: #060807;
+  background-color: #ded9d3;
+}
+
 .wrap {
   width: 100%;
-  padding: 100px 0;
+  padding: 100px 16px;
 }
 .wrap .contents {
   max-width: 1400px;
   margin: auto;
-  padding: 0 16px;
+  padding-bottom: 20px;
+  background-color: #fff8f0;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
 }
-.wrap .contents .title {
-  font-size: 32px;
+.wrap .contents .title_wrap {
+  font-family: "Playfair Display", serif;
+  padding: 50px 16px;
   text-align: center;
-  margin-bottom: 40px;
+  border-bottom: 2px solid #060807;
+  margin-bottom: 20px;
+}
+.wrap .contents .title_wrap .contents_title {
+  font-size: 68px;
+  font-weight: 700;
+}
+.wrap .contents .title_wrap .title_sub {
+  font-size: 14px;
+  font-weight: 500;
+}
+.wrap .contents .title_wrap .title_sub .date {
+  float: right;
+  text-align: right;
 }
 .wrap .contents .category {
+  max-width: 1200px;
+  margin: auto;
   display: flex;
   justify-content: center;
   gap: 10px;
   margin-bottom: 40px;
 }
 .wrap .contents .category button {
-  color: #333;
-  background-color: #fff;
-  padding: 10px 16px;
-  border: 1px solid #333;
-  border-radius: 4px;
+  padding: 0 25px;
+  height: 40px;
+  font-size: 13px;
+  line-height: 40px;
+  color: #060807;
+  background-color: transparent;
+  border: 1px solid #060807;
   transition: 0.3s;
   cursor: pointer;
 }
 .wrap .contents .category button:hover {
-  background-color: #333;
   color: #fff;
+  background-color: #060807;
 }
 .wrap .contents .category button.on {
-  background-color: #333;
   color: #fff;
+  background-color: #060807;
 }
 .wrap .contents .newsList {
+  position: relative;
   width: 100%;
-  padding: 30px;
-  background-color: #f0f0f0;
-  border-radius: 10px;
+  min-height: 500px;
+  padding: 0 16px;
 }
 .wrap .contents .newsList ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 16px;
 }
 .wrap .contents .newsList ul li {
-  background-color: #fff;
-  border-radius: 10px;
+  position: relative;
   padding: 20px;
+  border: 1px solid #060807;
 }
 .wrap .contents .newsList ul li figure {
   width: 100%;
-  height: 200px;
-  overflow: hidden;
+  margin-bottom: 16px;
 }
 .wrap .contents .newsList ul li figure .img {
   width: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: center 10%;
+  height: 300px;
+}
+.wrap .contents .newsList ul li:first-child {
+  grid-column: 1/3;
+}
+.wrap .contents .newsList ul li:first-child .img {
+  height: 400px;
 }
 .wrap .contents .newsList ul li .title {
-  font-size: 24px;
-  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 24px;
+}
+.wrap .contents .newsList ul li .text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 4;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  margin-bottom: 60px;
+}
+.wrap .contents .newsList ul li .viewMore {
+  position: absolute;
+  display: block;
+  right: 20px;
+  bottom: 20px;
+  padding: 7px 15px;
+  font-size: 13px;
+  color: #fff;
+  background-color: #060807;
+}
+.wrap .contents .newsList .loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+}
+.wrap .contents .newsList .loading .circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 100%;
+  border: 10px solid rgba(6, 8, 7, 0.2);
+  border-top-color: rgb(6, 8, 7);
+  animation: spin 1s infinite linear;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /*# sourceMappingURL=layout.css.map */
