--- a/react_study/src/react_15/ex03/css/App.css
+++ b/react_study/src/react_15/ex03/css/App.css
@@ -5,3 +5,181 @@ img, video, audio, iframe {display: block;max-width: 100%;}
 ul, li {list-style: none;}
 figure {width: fit-content;height: fit-content;}
 table, th, td {border-collapse: collapse; border-spacing: 0;}
+
+.wrap {width: 100%;}
+.wrap .inner {
+    position: relative;
+    max-width: 600px;
+    margin: 100px auto;
+    overflow: hidden;
+}
+.wrap .inner .title {
+    text-align: center;
+    margin-bottom: 24px;
+}
+.tel_wrap {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+}
+
+.tel_wrap > div {
+    border: 1px solid #ececec;
+    padding: 40px 24px 24px 24px;
+}
+
+.add_tel {
+    position: absolute;
+    width: 100%;
+    background-color: #fff;
+    z-index: 9999;
+}
+
+.add_tel form {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.add_tel form > div {
+    position: relative;
+    width: 100%;
+}
+
+.add_tel form > div span {
+    position: absolute;
+    top: 50%;
+    left: 8px;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #313131;
+    transition: 0.3s;
+    z-index: 1;
+}
+.add_tel form > div input[type='text'] {
+    position: relative;
+    width: 100%;
+    height: 36px;
+    font-size: 14px;
+    padding-left: 8px;
+    border: none;
+    border-bottom: 1px solid #313131;
+    outline: none;
+    background-color: transparent;
+    z-index: 2;
+}
+
+.add_tel form > div input[type='text']:focus {
+    border-bottom: 2px solid #313131;
+}
+
+.add_tel form > div input[type='text']:focus + span,
+.add_tel form > div span.fill {
+    top: -30%;
+    font-size: 12px;
+    color: #bbbbbb;
+}
+
+.add_tel form > button {
+    align-self: flex-end;
+    width: fit-content;
+    padding: 4px 16px;
+    cursor: pointer;
+}
+
+.tel_list {
+    flex-basis: 100%;
+}
+
+.tel_list .search {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 10px;
+}
+
+.tel_list .search span {
+    position: absolute;
+    top: 50%;
+    left: 4px;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #313131;
+    transition: 0.3s;
+    z-index: 1;
+}
+
+.tel_list .search input[type='text']{
+    position: relative;
+    width: 100%;
+    height: 36px;
+    font-size: 14px;
+    padding-left: 4px;
+    border: none;
+    border-bottom: 1px solid #313131;
+    outline: none;
+    background-color: transparent;
+    z-index: 2;
+}
+
+.tel_list .search input[type='text']:focus {
+    border-bottom: 2px solid #313131;
+}
+
+.tel_list .search input[type='text']:focus + span,
+.tel_list .search span.fill {
+    top: -30%;
+    font-size: 12px;
+    color: #bbbbbb;
+}
+
+.tel_list .search button {
+    width: 50px;
+    height: 36px;
+    cursor: pointer;
+}
+
+.tel_list .member {
+    margin-bottom: 10px;
+}
+
+.tel_list ul {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 8px;
+    min-height: 380px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.tel_list ul li {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 16px;
+    background-color: #f7f7f7;
+    column-gap: 16px;
+}
+.tel_list ul li img {
+    width: 60px;
+    grid-row: 1/3;
+    border: 1px solid #bbbbbb;
+    border-radius: 100%;
+}
+.tel_list ul li h2 {
+    font-size: 14px;
+    font-weight: 600;
+    grid-column: 2/4;
+    grid-row: 1/2;
+    align-content: end;
+}
+.tel_list ul li p {
+    font-size: 12px;
+    color: #666;
+    font-weight: 500;
+    grid-column: 2/4;
+    grid-row: 2/3;
+    align-content: start;
+}
